<resources>
	<string name="app_name">ProHeal Demo</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="main_scan">Find Devices</string>
	<string name="main_stop_scan">Stop</string>
	<string name="main_welcome">This is an example of how Indoor Localization works together with the Crownstone Cloud API to provide you with localization based authentication. You can always switch a room locally, but remotely only if you own the room</string>
	<string name="main_closest_device">Closest device: %s</string>
	<string name="main_title">Hi …</string>
	<string name="title_activity_control">ControlActivity</string>
	<string name="control_disconnect">Disconnect</string>
	<string name="control_power_on">Power ON</string>
	<string name="control_power_off">Power OFF</string>
	<string name="title_activity_login">Sign in</string>
	<string name="main_current_location">Your current location is:</string>
	<string name="action_logout">LogOut</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>

	<!-- Strings related to settings -->
	<string name="settings_clear">Clear Settings</string>
	<string name="settings_presence_threshold">Change the presence threshold:</string>
	<string name="settings_login">Log In</string>
	<string name="settings_status">Status:</string>
	<string name="settings_save">Save Settings</string>
	<string name="action_refresh">Refresh</string>

</resources>
