<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context=".MainActivity">

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/main_title"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_alignParentTop="true"
		/>

	<TextView
		android:id="@+id/welcome"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_welcome"
		android:layout_below="@+id/title"
		android:layout_marginTop="16dp"
		/>

	<RelativeLayout
		android:id="@+id/layLocation"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/welcome"
		android:layout_marginTop="16dp"
		>

		<TextView
			android:id="@+id/lblLocation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_current_location"
			/>

		<TextView
			android:id="@+id/txtLocation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/lblLocation"
			android:layout_marginTop="16dp"
			android:layout_centerHorizontal="true"
			android:text="Unknown"
			android:textAppearance="?android:attr/textAppearanceLarge"
			/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/layControl"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layLocation"
		android:layout_marginTop="16dp"
		>

		<TextView
			android:id="@+id/lblSelectRoom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Select Room"
			/>

		<Spinner
			android:id="@+id/spRoom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/lblSelectRoom"
			android:layout_marginLeft="16dp"
			>

		</Spinner>

		<RelativeLayout
			android:id="@+id/laySwitch"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/spRoom"
			android:visibility="gone"
			>

			<LinearLayout
				android:id="@+id/layPower"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				>

				<Button
					android:id="@+id/btnPowerOn"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:text="@string/control_power_on"
					android:layout_gravity="center_vertical"/>

				<Button
					android:id="@+id/btnPowerOff"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:text="@string/control_power_off"
					/>
			</LinearLayout>

			<ImageView
				android:id="@+id/imgLightBulb"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_centerHorizontal="true"
				android:layout_alignParentTop="true"
				android:layout_above="@+id/layPower"
				android:src="@drawable/light_bulb_off"
				/>

		</RelativeLayout>

	</RelativeLayout>

	<LinearLayout
		android:id="@+id/layScan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@+id/layControl"
		android:layout_marginTop="16dp"
		>

		<Button
			android:id="@+id/btnScan"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/main_scan"
			/>

		<Spinner
			android:id="@+id/spFilter"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content">

		</Spinner>

	</LinearLayout>

	<RelativeLayout
		android:id="@+id/layDebug"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layScan"
		android:layout_alignParentBottom="true"
		>

		<TextView
			android:id="@+id/txtClosest"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_closest_device"
			android:layout_alignParentBottom="true"
			android:layout_marginTop="16dp"
			/>

		<ListView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/lvScanList"
			android:layout_above="@+id/txtClosest"
			android:layout_alignParentTop="true"
			/>

	</RelativeLayout>


</RelativeLayout>
