<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:fillViewport="true">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
					xmlns:tools="http://schemas.android.com/tools"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin"
					tools:context="nl.dobots.presence.gui.SettingsActivity">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/settings_status"
			android:id="@+id/lblStatus"
			android:layout_alignParentTop="true"
			android:layout_alignParentStart="true"
			android:layout_marginStart="10dp"
			android:layout_marginTop="20dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:textStyle="bold|italic"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/txtLogInStatus"
			android:layout_alignBaseline="@+id/lblStatus"
			android:layout_toEndOf="@+id/lblStatus"
			android:layout_marginStart="10dp"/>

		<Button
			android:id="@+id/btnLogin"
			android:text="@string/settings_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/txtLogInStatus"
			android:layout_alignParentEnd="true"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/settings_presence_threshold"
			android:id="@+id/lblPresenceThreshold"
			android:layout_below="@+id/lblStatus"
			android:layout_alignParentStart="true"
			android:layout_marginTop="40dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text=""
			android:id="@+id/txtPresenceThreshold"
			android:layout_marginStart="10dp"
			android:layout_alignTop="@+id/lblPresenceThreshold"
			android:layout_toEndOf="@+id/lblPresenceThreshold"/>

		<SeekBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/sbPresenceThreshold"
			android:visibility="visible"
			android:clickable="false"
			android:layout_below="@+id/txtPresenceThreshold"
			android:layout_alignParentStart="true"
			android:layout_alignParentEnd="true"/>

		<Button
			android:id="@+id/btnClearSettings"
			android:text="@string/settings_clear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentBottom="true"
			android:onClick="clearSettings"/>

		<Button
			android:id="@+id/btnSaveSettings"
			android:text="@string/settings_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="true"
			android:onClick="saveSettings"/>

	</RelativeLayout>

</ScrollView>